Baby Senses: Mobile: fixes horizontal alignment of footer nav.

--- a/Baby Senses/css/layout.mobile.css
+++ b/Baby Senses/css/layout.mobile.css
@@ -45,6 +45,7 @@
     top  : 68px;
     text-align : center;
     width : 100%;
+    left : 0px;
 }
 
 /* Footer contact label (E.g. "E:" for 'Email:' */
@@ -114,6 +115,12 @@
     position : relative;
     left     : -280px;
     top      : 40px;
+}
+
+.social-button
+{
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 
@@ -410,7 +417,8 @@ BODY {
         display: inline-block;
         vertical-align: top;
         float: none;
-        margin: 0 5px;
+        width:100%;
+        text-align:center;
     }
 /* End previous media queries */
 
